Adding extra plugins, taking python3 out
Because now python3 plugin relies on the interpreter compiling it, it
has to be built separately (see
http://projects.unbit.it/uwsgi/wiki/Guide4Packagers)
I also added a handful of extra plugins, and am now inheriting from base

--- a/fedora.ini
+++ b/fedora.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-inherit = default
+inherit = base
 embedded_plugins = echo, ping, http
-plugins = rack, psgi, python, nagios, fastrouter, admin, python32, ruby19, cache, cgi, rpc, ugreen, greenlet, lua
+plugins = rack, psgi, python, nagios, fastrouter, admin, ruby19, cache, cgi, rpc, ugreen, greenlet, lua, php, carbon, rrdtool, rsyslog, syslog
 
