Build with support for POSIX capabilities
Build with support for POSIX capabilities.
Allow emperor to setuid/setgid.
Re-enable tyrant mode.

--- a/emperor.ini
+++ b/emperor.ini
@@ -4,3 +4,5 @@ gid = uwsgi
 socket = /run/uwsgi/uwsgi.socket
 pidfile = /run/uwsgi/uwsgi.pid
 emperor = /etc/uwsgi.d
+emperor-tyrant = true
+cap = setgid,setuid
