Adapt for EPEL-6
Log to separate logfile.
Use /var/run instead of /run.
Add a sysv-init script.
Remove some plugins and functionality due to the lack of dependent libraries in
RHEL 6/EPEL-6.
Add a patch from upstream in order to fix the build with older libcurl.
Remove language from code block directives in the documentation causing older
sphix to abort.

--- a/emperor.ini
+++ b/emperor.ini
@@ -1,8 +1,11 @@
 [uwsgi]
 uid = uwsgi
 gid = uwsgi
-socket = /run/uwsgi/uwsgi.socket
-pidfile = /run/uwsgi/uwsgi.pid
+umask = 022
+socket = /var/run/uwsgi/uwsgi.socket
+pidfile = /var/run/uwsgi/uwsgi.pid
+daemonize = /var/log/uwsgi.log
+log-reopen =
 emperor = /etc/uwsgi.d
 emperor-tyrant = true
 cap = setgid,setuid
