Remove socket from default configuration and fix log rotation
In emperor mode socket will create a useless worker which writes its PID
to the pidfile, when reloading a SIGHUP sent to the worker will take
down the emperor as well.
Fix log rotation by using the copytruncate method, an emperor cannot
reopen its logfile.
Add timestamps to log messages.
Add files missed in last commit.

--- a/emperor.ini
+++ b/emperor.ini
@@ -2,10 +2,9 @@
 uid = uwsgi
 gid = uwsgi
 umask = 022
-socket = /var/run/uwsgi/uwsgi.socket
 pidfile = /var/run/uwsgi/uwsgi.pid
 daemonize = /var/log/uwsgi.log
-log-reopen =
+log-date = true
 emperor = /etc/uwsgi.d
 emperor-tyrant = true
 cap = setgid,setuid
